Final Release - v1.0 RASD

--- a/Files/alloy.tex
+++ b/Files/alloy.tex
@@ -1,9 +1,9 @@
 
 \subsection{Signatures}
 
-\begin{figure}[H]
+\begin{figure}[!h]
 	\centering
-	\includegraphics{Images/Alloy/data.png}
+	\includegraphics[height=\linewidth]{Images/Alloy/data.png}
 	\caption{\label{fig:AlloySig1}Alloy signatures 1/2 }
 \end{figure}
 
@@ -23,7 +23,7 @@
 
 \begin{figure}[H]
 	\centering
-	\includegraphics{Images/Alloy/data3.png}
+	\includegraphics[width=\textwidth]{Images/Alloy/data3.png}
 	\caption{\label{fig:AlloyFacts2}Alloy facts 2/2 }
 \end{figure}
 
@@ -31,7 +31,7 @@
 
 \begin{figure}[H]
 	\centering
-	\includegraphics{Images/Alloy/data4.png}
+	\includegraphics[width=\textwidth]{Images/Alloy/data4.png}
 	\caption{\label{fig:AlloyPredicates}Alloy predicates }
 \end{figure}
 
