--- a/Files/effort.tex
+++ b/Files/effort.tex
@@ -1,1 +1,60 @@
-Provide here information about how much effort each group member spent in working at this document. We would appreciate details here.
+
+\subsection{Fiorillo}
+
+\begin{tabular}{|c|c|}
+	\hline
+8/10/2017	& 45m \\ 
+	\hline 
+11/10/2017	& 45m \\ 
+	\hline 
+12/10/2017	& 1h20m \\ 
+	\hline 
+13/10/2017	& 1h \\ 
+	\hline 
+15/10/2017	& 2h \\ 
+	\hline 
+23/10/2017	& 1h15m \\ 
+	\hline 
+24/10/2017	& 30m \\ 
+	\hline 
+26/10/2017	& 2h15m \\ 
+	\hline 
+28/10/2017	& 30m \\ 
+	\hline
+29/10/2017	& 3h \\ 
+	\hline
+TOT			& 13h20m \\
+
+\end{tabular} 
+
+\subsection{Daverio}
+
+\begin{tabular}{|c|c|}
+	\hline
+	2/10/2017	& 30m \\ 
+	\hline 
+	4/10/2017	& 40m \\ 
+	\hline 
+	7/10/2017	& 30m \\ 
+	\hline 
+	10/10/2017	& 2h20m \\ 
+	\hline 
+	14/10/2017	& 1h40m \\ 
+	\hline 
+	18/10/2017	& 3h \\ 
+	\hline 
+	20/10/2017	& 45m \\ 
+	\hline 
+	21/10/2017	& 1h20m \\ 
+	\hline 
+	25/10/2017	& 1h45m \\ 
+	\hline 
+	27/10/2017	& 7h45m \\ 
+	\hline 
+	28/10/2017	& 9h30m \\ 
+	\hline
+	29/10/2017	& 16h45m \\ 
+	\hline
+	TOT			& 47h30m \\
+
+\end{tabular}
