--- a/Files/introduction.tex
+++ b/Files/introduction.tex
@@ -31,7 +31,45 @@ All the required supported companies provide aforementioned services.
 
 \subsubsection{Goals}
 %what you write here is a comment that is not shown in the final text
-{To be retrive from google docs}
+\begin{itemize}
+	\item[G1] Allow the user to add an appointment
+	\subitem[G1.1] The user can add the date of the appointment through a calendar
+	\subitem[G1.2] The user can select the location through a map
+	\subitem[G1.3] The appointment must be processed by the system
+	\item[G2] - Provide a route to the user for reaching the appointments
+	\subitem[G2.1] The user must reach on time his/her appointments
+	\subitem[G2.2] The user can choose the starting location and time of the route
+	\subitem[G2.3] Generate routes according to the preferences of the user
+	\subitem[G2.4] The application provides a route for each objective, minimizing each of these attributes: length, duration, number of changes, carbon footprint
+	\subitem[G2.5] Always provide a route
+	\subitem[G2.6] During strike days, public transportation must not be available
+	\subitem[G2.7] Report unfavorable weather conditions
+	\subitem[G2.8] Update unfavorable weather conditions
+	\subitem[G2.9] The user can save one route among the shown ones
+	\item[G3] Allow the user to sign up into the application
+	\subitem[G3.1] The registration must allow the univocal recognition of the user
+	\item[G4] Allow the user to log in
+	\subitem[G4.1] The system allow the login through e-mail and password
+	\subitem[G4.2] The application allow the login through telephone number
+	\item[G5] Allow the user to add his own preferences
+	\subitem[G5.1] The user must be logged
+	\subitem[G5.2] The preferences are synchronized between the application and the database
+	\subitem[G5.3] The user can chose the available transport means
+	\subitem[G5.4] The user can add a priority to the means of transport
+	\subitem[G5.5] The user can add the maximum length of routes on foot or by bicycle
+	\subitem[G5.6] For each vehicle the user can choose a time slot of validity
+	\subitem[G5.7] The user can set Flexible Lunch
+	\subitem[G5.8] The user can add breaks for fixed moments of the day
+	\subitem[G5.9] The user can add a private car or bicycle
+	\subitem[G5.10] The user can organize his preferences in “Preferences Profiles"
+	\item[G6] Allow the user to manage his account
+	\subitem[G6.1] The user must be able to remove appointments and routes
+	\subitem[G6.2] The user must be able to modify appointments and routes
+	\subitem[G6.3] The user must be able to delete his account
+	\item[G7] Allow the user to report events and disservices 
+	\subitem[G7.1] The user can report strikes using the application
+	\subitem[G7.2] The user can report faults, malfunctions and suggestions
+\end{itemize}
 
 \subsection{Definitions, Acronyms, Abbreviations}
 
