--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,6 @@
 \addcontentsline{toc}{section}{List of Figures}
 \listoffigures
 \addcontentsline{toc}{section}{List of Tables}
-\listoftables
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
@@ -98,10 +97,10 @@
 
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
-\clearpage
-\addcontentsline{toc}{section}{References}
-\bibliographystyle{plain}
-\bibliography{main}
+%\clearpage
+%\addcontentsline{toc}{section}{References}
+%\bibliographystyle{plain}
+%\bibliography{main}
 %------------------------------------------------------------------------------------------------------------------------------------------------
 
 
