Created releases folder for deliverable, updated project structure, filled introduction part #7, updated effort spent part

--- a/DD/Files/architecture.tex
+++ b/DD/Files/architecture.tex
@@ -1,3 +1,22 @@
+%Architectural Design section
+
+\subsection{Overview}
+% High level components and their interactions
+
+\subsection{Component view}
+
+\subsection{Deplyment view}
+
+\subsection{Runtime view}
+%Sequence diagrams to describe the way components interact to accomplish each task from use cases
+
+\subsection{Component Interfaces}
+
+\subsection{Selected architectural styles and patterns}
+
+\subsection{Other design decisions}
+
+
 Here you can see how to include an image in your document.
 
 \begin{sidewaysfigure}
