--- a/DD/Files/effort.tex
+++ b/DD/Files/effort.tex
@@ -1,1 +1,53 @@
-Provide here information about how much effort each group member spent in working at this document. We would appreciate details here.
+
+
+\paragraph*{Daverio}
+
+\begin{tabular}{|c|c|}
+	\hline 
+20/11/2017	& 1h15m \\ 
+	\hline 
+21/11/2017	& 1h30m \\ 
+	\hline 
+22/11/2017	& 2h45m \\ 
+	\hline 
+	&  \\ 
+	\hline 
+	&  \\ 
+	\hline 
+	&  \\ 
+	\hline 
+	&  \\ 
+	\hline 
+	&  \\ 
+	\hline 
+	&  \\ 
+	\hline 
+\textbf{Total}	&  \\ 
+	\hline 
+\end{tabular} 
+
+\paragraph*{Fiorillo}
+
+\begin{tabular}{|c|c|}
+	\hline 
+		&  \\ 
+	\hline 
+		&  \\ 
+	\hline 
+		&  \\ 
+	\hline 
+	&  \\ 
+	\hline 
+	&  \\ 
+	\hline 
+	&  \\ 
+	\hline 
+	&  \\ 
+	\hline 
+	&  \\ 
+	\hline 
+	&  \\ 
+	\hline 
+\textbf{Total}	&  \\ 
+	\hline 
+\end{tabular} 
