--- a/RASD/Files/alloy.tex
+++ b/RASD/Files/alloy.tex
@@ -15,9 +15,9 @@
 
 \subsection{Facts}
 
-\begin{figure}[H]
+\begin{figure}
 	\centering
-	\includegraphics{Images/Alloy/data2.png}
+	\includegraphics[width = \textwidth]{Images/Alloy/data2.png}
 	\caption{\label{fig:AlloyFacts1}Alloy facts 1/2 }
 \end{figure}
 
