--- a/RASD/Files/effort.tex
+++ b/RASD/Files/effort.tex
@@ -55,6 +55,8 @@ TOT			& 13h20m \\
 	\hline
 	29/10/2017	& 16h45m \\ 
 	\hline
-	TOT			& 47h30m \\
+	20/11/2017	& 20m	\\
+	\hline
+	TOT			& 47h50m \\
 
 \end{tabular}
