--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -96,6 +96,10 @@ All the required supported companies provide aforementioned services.
 
 \subsection{Revision history}
 
+\begin{itemize}
+	\item \emph{V 1.0} First Release
+	\item \emph{V 1.1} Fixed blanc page (visualization bugs) in alloy part and sequence diagrams displayed in Specific Requirement section
+\end{itemize}
 
 
 
