--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -176,7 +176,7 @@ Front End application will be eventually distributed under Freeware License
 	Bob is the owner of a private car that he would like to use during his travels. Since he is already registered and logged in, he can add, as global preference (to “default” profile) his car, indicating where it is normally parked. By this moment, every new generated route for an appointment can consider the employment of own registered means.
 	
 	
-\subsection{Use case description and diagram}
+\subsection{Use case description}
 \begin{figure} [H]
 	\centering
 	\includegraphics{Images/UseCaseTables/1_user_reg.PNG}
@@ -243,3 +243,65 @@ Front End application will be eventually distributed under Freeware License
 	\includegraphics[width=\textwidth]{Images/UseCase_Diagram.png}
 	\caption{\label{fig:useCaseDiagram}Use case diagram  }
 \end{sidewaysfigure}
+
+\subsection{Sequence diagrams}
+
+\begin{figure} [H]
+	\centering
+	\includegraphics{Images/SequenceDiagrams/1_User_Registration.png}
+	\caption{\label{fig: sequenceDiagram1}Sequence Diagram - User registrate new profile  }
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics{Images/SequenceDiagrams/2_User_Login.png}
+	\caption{\label{fig: sequenceDiagram2}Sequence Diagram - User logs in  }
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics{Images/SequenceDiagrams/3_Appointment_addition.png}
+	\caption{\label{fig: sequenceDiagram3}Sequence Diagram - User add an appointment  }
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[totalheight = \textheight]{Images/SequenceDiagrams/4_Add_a_route.png}
+	\caption{\label{fig: sequenceDiagram4}Sequence Diagram - User chooses a route  }
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics{Images/SequenceDiagrams/5_Appointment_Change.png}
+	\caption{\label{fig: sequenceDiagram5}Sequence Diagram - User modificates an appointment  }
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics{Images/SequenceDiagrams/6_Appointment_Delete.png}
+	\caption{\label{fig: sequenceDiagram6}Sequence Diagram - User deletes an appointment  }
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[totalheight = \textheight]{Images/SequenceDiagrams/7_Add_a_route.png}
+	\caption{\label{fig: sequenceDiagram7}Sequence Diagram - User adds a new route to appointment  }
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics{Images/SequenceDiagrams/8_Route_Delete.png}
+	\caption{\label{fig: sequenceDiagram8}Sequence Diagram - User deletes a saved route }
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[totalheight = \textheight]{Images/SequenceDiagrams/9_Report.png}
+	\caption{\label{fig: sequenceDiagram9}Sequence Diagram - User report }
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[totalheight = \textheight] {Images/SequenceDiagrams/10_Add_profile_preferences.png}
+	\caption{\label{fig: sequenceDiagram10}Sequence Diagram - User adds a preferences profile }
+\end{figure}
