correzioni main.tex e inserito effort personale so far

--- a/DD/Files/effort.tex
+++ b/DD/Files/effort.tex
@@ -1,53 +1,93 @@
-
-
 \paragraph*{Daverio}
 
 \begin{tabular}{|c|c|}
+
 	\hline 
+
 20/11/2017	& 1h15m \\ 
+
 	\hline 
+
 21/11/2017	& 1h30m \\ 
+
 	\hline 
+
 22/11/2017	& 2h45m \\ 
+
 	\hline 
+
 	&  \\ 
+
 	\hline 
+
 	&  \\ 
+
 	\hline 
+
 	&  \\ 
+
 	\hline 
+
 	&  \\ 
+
 	\hline 
+
 	&  \\ 
+
 	\hline 
+
 	&  \\ 
+
 	\hline 
+
 \textbf{Total}	&  \\ 
+
 	\hline 
-\end{tabular} 
+
+\end{tabular}
+
+% ------------------------------------------------------------------------
 
 \paragraph*{Fiorillo}
 
 \begin{tabular}{|c|c|}
+
+	\hline
+
+15/11/2017	& 1h30m \\ 
+
 	\hline 
-		&  \\ 
+
+16/11/2017	& 1h30m \\ 
+
 	\hline 
-		&  \\ 
+
+17/11/2017	& 1h30m \\ 
+
 	\hline 
-		&  \\ 
+
+18/11/2017	& 3h \\ 
+
 	\hline 
-	&  \\ 
+
+22/11/2017	& 1h \\ 
+
 	\hline 
-	&  \\ 
+
+23/11/2017	& 1h30m \\ 
+
 	\hline 
-	&  \\ 
+
+24/11/2017	& 2h50m \\ 
+
 	\hline 
-	&  \\ 
-	\hline 
-	&  \\ 
-	\hline 
-	&  \\ 
-	\hline 
-\textbf{Total}	&  \\ 
-	\hline 
-\end{tabular} 
+
+25/11/2017	& 2h15m \\ 
+
+	\hline
+
+\textbf{Total}	& 15h05m \\
+
+	\hline
+
+\end{tabular}
