--- a/DD/main.tex
+++ b/DD/main.tex
@@ -34,11 +34,11 @@
 \begin{tabu} to \textwidth { X[0.3,r,p] X[0.7,l,p] }
 \hline
 
-\textbf{Deliverable:} & RASD\\
+\textbf{Deliverable:} & DD\\
 \textbf{Title:} & Design Document \\
 \textbf{Authors:} & Daverio Pietro, Fiorillo Alessandro \\
 \textbf{Version:} & 1.0 \\ 
-\textbf{Date:} & 26-November-2018 \\
+\textbf{Date:} & 26-November-2017 \\
 \textbf{Download page:} & https://github.com/FiorixF1/DaverioFiorillo \\
 \textbf{Copyright:} & Copyright © 2018, Daverio, Fiorillo @ Politecnico di Milano \\
 \hline
